--- a/bai14-intent/app/src/main/AndroidManifest.xml
+++ b/bai14-intent/app/src/main/AndroidManifest.xml
@@ -13,8 +13,12 @@
         android:theme="@style/Theme.Bai14intent"
         tools:targetApi="31">
         <activity
-            android:name=".manhinh2"
+            android:name=".manhinh3"
             android:exported="false" />
+        <activity
+            android:name=".manhinh2"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
