--- a/bai15-vongdoiactivity/app/src/main/AndroidManifest.xml
+++ b/bai15-vongdoiactivity/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.Bai15vongdoiactivity"
         tools:targetApi="31">
         <activity
+            android:name=".manhinh3"
+            android:theme="@style/Theme.AppCompat.Dialog"
+            android:exported="false" />
+        <activity
+            android:name=".manhinh2"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
