--- a/bai17-fragment/app/src/main/AndroidManifest.xml
+++ b/bai17-fragment/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Bai17fragment">
+            android:theme="@style/Theme.AppCompat"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
