--- a/bai23-kotlin-firebase/app/src/main/AndroidManifest.xml
+++ b/bai23-kotlin-firebase/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Bai23kotlinfirebase"
         tools:targetApi="31">
         <activity
+            android:name=".InsertionActivity"
+            android:theme="@style/Theme.AppCompat"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
