--- a/bai23-kotlin-firebase/app/src/main/AndroidManifest.xml
+++ b/bai23-kotlin-firebase/app/src/main/AndroidManifest.xml
@@ -13,9 +13,17 @@
         android:theme="@style/Theme.Bai23kotlinfirebase"
         tools:targetApi="31">
         <activity
+            android:name=".EmployeeDetailsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
+            android:name=".FetchingActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
             android:name=".InsertionActivity"
-            android:theme="@style/Theme.AppCompat"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
